--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "element-ui": "^2.13.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "axios": "latest"
+    "axios": "latest",
+    "qs": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
